--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section class="sobre__mim" id="sobre">
         <h2 class="titulo__sobre__mim">Sobre mim</h2>
-                <p class="texto__sobre__mim">Meu nome é Daniel Galdino e sou formado e pós graduado em História.</p>
+                <p class="texto__sobre__mim">Meu nome é Daniel Galdino, tenho 27 anos e sou formado e pós graduado em História.</p>
                 <p class="texto__sobre__mim">Há cerca de 10 anos trabalho de forma autonoma com montagem e manutenção de 
                     computadores e agora buscando novos desafios.</p>
                 <p class="texto__sobre__mim">Estou cursando Análise e Desenvolvimento de Sistemas
