--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p class="texto__sobre__mim">Há cerca de 10 anos trabalho de forma autonoma com montagem e manutenção de 
                     computadores e agora buscando novos desafios.</p>
                 <p class="texto__sobre__mim">Estou cursando Análise e Desenvolvimento de Sistemas
-                    e também faço curso de programação da Proz Educação.</p>
+                    e sou formado no curso de Desenvolvimento Web da Proz Educação.</p>
                 <p class="texto__sobre__mim">O meu estalo parar iniciar na programação foi ter participado do Hackathon
                     da Recode Pro 2022.</p>
                 <p class="texto__sobre__mim">Estou em busca da minha primeira experiência profissional para 
